--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -60,20 +60,43 @@ a:hover {
     height: 0;
     overflow: hidden;
 }
-#logo {
-    left: 10%;
-    position: relative;
-    top: 0;
+a#recover {
+  font-size: 10px;
+  position:relative;
+  margin-top: -20px;
+  float: left;
+  clear: right;
+  
 }
-#boxed {
-    border: 1px solid;
-    height: 10cm;
-    left: 15%;
-    padding: 10px;
+
+.nosel {-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none;-o-user-select: none;user-select: none;}
+a {color: #627fa7;text-decoration: none;}
+a:hover {text-decoration: underline;}
+input[type=text], select, .active-result {border: none;border-radius: 5px;padding: 1px;font-family: Century Gothic, sans-serif;font-size: 10px;outline: none; color:black; }
+input[type=password] {border: none;border-radius: 5px;padding: 1px;font-family: Century Gothic, sans-serif;font-size: 10px;outline: none;}
+label {font-family: Century Gothic, sans-serif;font-size: 10px;font-weight: bold;}
+.txt-fld {margin-left: 1px;padding: 0px;width: 10px;text-align: left;}
+.txt-fld label {text-align: left; color: #6B6DC1;}
+.txt-fld input, .txt-fld select {position: relative; border: 1px solid black;}
+.txt-fld input[type=submit] {position: relative;}
+.txt-fld input[type=file] {color: #FFF;}
+.txt-fld textarea {
     position: relative;
-    top: 0;
-    width: 20cm;
+    height: 20px;
+    width: 30px;
 }
+.txt-fld .chzn-container {
+    float: right;
+}
+.txt-fld select {height: 10px;}
+.btn-fld {position: relative;clear:left;padding: 2px 5px;text-align: left; }
+.btn-fld input[type=submit] {float: right;clear: left;margin: 5px 5px;font-size: 10px;}
+input[type=submit] {background: #b7db79;border: none;border-radius: 5px;color: #FFF;cursor: pointer;font-family: Arial, Helvetica, sans-serif;font-size: 10px;font-weight: bold;padding: 10px;text-shadow: 1px 1px 1px #333;}
+input[type=submit]:hover {}
+input[type=submit]:active {}
+
+
+
 a.button {border: 10px solid #444;border-radius: 10px;display: inline-block;height: 50px;margin: 10px 20px;padding: 20px;text-shadow: 0 2px 2px #630000;}
 a.h-button {
     color: #FFF;
@@ -133,6 +156,23 @@ p#title {
     padding-left: 0px;
     width: 90%;
 }
+div#logincontainer {
+  float: right;
+  clear: left;
+  height: 160px;
+  width: 200px;
+  background-color: #FFF;
+  border-radius: 15px 0px 0 15px;
+  margin-top: 1cm;
+  text-align: left;
+}
+p#logincontainer {
+  font-weight:bold; 
+  text-align:center; 
+  color:#6B6DC1; 
+  font-size: 10px;
+  margin: 0 auto;
+}
 #container {
     background-color: #6EB3EA;
 //     border-bottom: 1px solid black;
@@ -151,7 +191,7 @@ div#postlist {
 //     border: 1px solid black;
     background-color: #FFF;
     height: auto;
-    margin: 0px 0px 15px;
+    margin: 2cm 0px 15px;
     overflow: hidden;
     padding: 0px 5px 10px;
     text-align: center;
