--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,36 @@
 <div id="container">
-  <h2 style="font-size:2.5em;">HindSight.Me</h2>
-<!--<% if current_user %>
+
+<% if current_user %>
   <p><%= form_for Post.new, :remote => true do |f| %></p>
       <%= f.text_field :story %>
       <%= f.submit %>
      <%end%>
-<%end%>-->
+<%end%>
+
+<% unless user_signed_in? %>
+  <div id="logincontainer">
+	<%= form_for "user", :url => user_session_path do |f| %>
+	  <div class="txt-fld">
+	    <%= f.label :email %>
+	    <%= f.text_field :email %>
+	  <div style="clear:both"></div>
+	</div>
+	  <div class="txt-fld">
+	    <%= f.label :password %>
+	    <%= f.password_field :password %>
+	  <div style="clear:both"></div>
+	  </div>
+	  <div class="btn-fld">
+	    <%= f.label :remember_me %>
+	    <%= f.check_box :remember_me %>
+	    <%= f.submit "Login" %>
+	    <%= link_to "Recover my password", new_user_password_path, :id => "recover" %>  
+	  <div style="clear:both"></div>
+	  </div>
+	<% end %>
+      </div>
+<%end%>
+
   <div id="postlist" > 
     
     <% @posts.each do |s| %>
