--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,51 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div id="container">
+  <% if current_user %>
+  <%= link_to "Post", '#', :id => "toggle"%>
+  <div id="newpost" style="display:none"><%= render :partial => 'posts/new'%></div>
+  <%end%>
+  <% unless user_signed_in? %>
+    <%= render :partial => "home/login"%>
+  <%end%>
+  <div id="postlist" > 
+    <% @posts.order("created_at DESC").each do |s| %>
+      <div id="post">
+	<p id="title">Title: <%= s.title.titleize if s.title%></p>
+	<p id="post"><%= s.story.truncate(50) %></p><br />
+	<div id="hinds" >
+	    <p id="hinds">Subjects:
+	    <% s.hinds.each do |h|%>
+	      <%= h.subject + " " %>
+	    <%end%>
+	    </p>
+	</div>
+	<p id="author">By: <%= link_to s.author, user_path(s.user_id) %></p>
+      </div>
+    <%end%>
+  </div>
+  <%= image_tag("https://lh3.googleusercontent.com/-Y2tT2HPzBYM/AAAAAAAAAAI/AAAAAAAAAGc/7HRmHnsS4Ig/s200-c-k/photo.jpg", :id => "picture")%>
+  <div id="userinfo"> 
+    <% if @user.city %>
+      <p><h3 style="padding-top: 0; padding-bottom: 2px; margin-top: 0; margin-bottom: 0; display:inline;">City:</h3> <%= @user.city%></p>
+    <% end %>
+    <% if @user.state %>
+     <p><h3 style="padding-top: 0; margin-top: 0; margin-bottom: 0; display: inline; ">State:</h3> <%= @user.state%></p>
+    <%end%>
+  </div>
+  <p id="subjects"> Subjects: </p>
+  <p id="aboutuser">
+    <% if @user.about? %>
+      <%= "	" + @user.about %>
+    <% else %>
+      User has not yet filled this out.
+    <% end %>
+  </p>
+</div>
+
+<script type="text/javascript">
+
+$("#toggle").click(function() {
+   $("#postlist").hide("slide", { direction: "left" }, 1000);
+   $("#newpost").fadeIn(4000, "linear");
+
+});
+</script>
