--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
   <h3 id="title" ><%= @post.title%>  </h3>
   <% unless @post.hinds.empty?%>
     <p id="subs"><% @post.hinds.each do |h|%> 
-    <%= link_to h.subject, hind_path(h.id) %>
+    <%= link_to h.subject, hind_path(h.id), :id => "sublinks" %>
     <% end %>
     </p>
   <% end %>
