--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 html {
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
@@ -11,7 +11,9 @@ body {
     font: 14px/170% "Lucida Grande","Lucida Sans Unicode",Geneva,Verdana,sans-serif;
     margin: 0;
     padding: 0;
-    height: 100%;
+    min-height: 100%;
+    clear:both;
+    position: relative;
 }
 #link {
     font-size: 1em;
@@ -197,29 +199,15 @@ p#logincontainer {
 //         border-left: 1px solid black;
 // 	    border-right: 1px solid black;
     border-radius: 0px 0px 15px 15px;
-    margin: 0px 0px 1cm auto;
+    margin: 0px auto 0 auto;
     padding: 0px 0px;
     min-height: 100%;
     text-align: center;
-    width: 85%;
+    width: 70%;
     overflow: hidden;
+    clear: both;
 }
-div#postlist {
 
-//     border: 1px solid black;
-  background-color:#ffffff;
-  opacity:0.8; // this and line below added, transpatent
-  filter:alpha(opacity=80); /* For IE8 and earlier */
-    height: auto;
-    margin: 2cm 0px 15px;
-    overflow: hidden;
-    padding: 0px 5px 10px;
-    text-align: center;
-    width: 40%;
-        border-radius: 0px 40px 40px 0px;
-	clear: right; //changed from clear: both
-// 	float: left; //changed
-}
 div#post {   
   border-radius: 15px 15px 15px 15px;
   height: auto;
@@ -354,34 +342,30 @@ div#selecthinds {
 //------------------------------------------
 // User - Show 
 div#usercontainer {
-  opacity:0.9; // this and line below added, transpatent
-  filter:alpha(opacity=90); /* For IE8 and earlier */
-  background-color: #EEEEEE;
+  background-color: #d4e2ed;
   position: absolute;
   float: right;
   clear: left;
   top: 0%;
-  right: 5%;
-  margin: 10% 0 ;
+  right: 15%;
+  margin:8.3% 0 ;
   width: 40%;
   min-height: 490px;
-  border-radius: 15px 15px 15px 15px;
-  overflow:hidden;
+  border-radius: 35px 0px 0px 35px;
 }
 p#aboutuser {
 
   position: absolute;
   clear: both;
   min-height: 250px;
-  width: 98%;
-  left: 1px;
+  width: 94.5%;
+  left: 2%;
+  padding-bottom: 1%;
   top: 42%;
   //   border: 1px solid black;
   text-align: left;
-  background-color:#ffffff;
-  opacity:0.6;
-  filter:alpha(opacity=60); /* For IE8 and earlier */
-    border-radius: 10px 10px 10px 10px;
+  background-color:#d4e2ed;
+    border-radius: 20px 20px 20px 20px;
 
 }
 p#subjects {
@@ -389,7 +373,7 @@ p#subjects {
   position: absolute;
   top: 32%;
   height: 30px;
-  width: 100%;
+  width: 99%;
 //    border: 1px solid black;
   text-align: left;
   background-color: #6B6DC1;
@@ -425,16 +409,62 @@ img#picture {
 //    border: 1px solid black;
   text-align: left;
 }
+//----------------------------------------------------
+//Home Main Div's within #container
+div#rightdiv {
+  background-color: #d4e2ed;
+//   opacity:0.8; // this and line below added, transpatent
+//   filter:alpha(opacity=80); /* For IE8 and earlier */
+  min-height: 700px;
+  margin: 2cm 0px 15px;
+  overflow: hidden;
+  padding: 0px 5px 10px;
+  text-align: center;
+  width: 57%;
+  border-radius: 40px 0 0 40px;
+  clear: right; //changed from clear: both
+	float: right; //changed
+
+}
+div#postlist {
+
+//     border: 1px solid black;
+  background-color:#ffffff;
+  opacity:0.8; // this and line below added, transpatent
+  filter:alpha(opacity=80); /* For IE8 and earlier */
+  min-height: 700px;
+  margin: 2cm 0px 15px;
+  overflow: hidden;
+  padding: 0px 5px 10px;
+  text-align: center;
+  width: 40%;
+  border-radius: 0px 40px 40px 0px;
+  clear: right; //changed from clear: both
+	float: left; //changed
+}
+div#rightlinkcolumn {
+  background-color: #d4e2ed;
+//   opacity:0.8; // this and line below added, transpatent
+//   filter:alpha(opacity=80); /* For IE8 and earlier */
+  min-height: 100%!important;
+  width: 56%;
+  clear: both; //changed from clear: both
+  top: 0;
+  right: 0;
+  z-index: -1;
+  position: absolute;
+}
 
 //------------------------------------------------------
 // Post - Show
 
 div#postshow {
-  width: 70%;
+  width: 100%;
   min-height: 400px;
 //   border: 1px solid black;
-  margin: 2% 15% 0;
-  border-radius: 35px 35px 0 0;
+  margin-left: 1%;
+  margin-top: 2%;
+  border-radius: 35px 0px 0 0;
   background-color: #EEEEEE;
   clear: right;
 }
@@ -475,12 +505,17 @@ div#postshow p#poststory {
 //------------------------------------------------------
 h3#authorlink {
 //   border: 1px solid black;
-  width: 70%;
-  margin: 0% 15% 5%;;
+  width: 100%;
+  position: relative;
+  top: 0;
+  border-radius: 0 0 0 35px;
   text-align: center;
   padding: 15px 0 15px 0;
   background-color: #6B6DC1;
   opacity: 0.8;
+  margin-left: 1%;
+  margin-bottom: 2%;
+  margin-top: 0;
 }
 h3#authorlink a#alink {
 
@@ -488,9 +523,41 @@ h3#authorlink a#alink {
   font-weight: bold;
   font-size: 35px;
 }
+// Link area for User show section
+h3#authpostlink {
+//   border: 1px solid black;
+  width: 100%;
+  border-radius: 0 0 0 0px;
+  text-align: center;
+  padding: 15px 0 15px 0;
+  background-color: #6B6DC1;
+  opacity: 0.8;
+  margin-top: 0;
+  position: absolute;
+  bottom: 0;
+}
 //--------------------------------------
 //Post Show Comments Box
 //--------------------------------------------------------
+//Buttons
+a#newpostbttn {
+    background: #9ec866;
+    border-radius: 2px;
+    box-shadow: 2px 2px 2px #555;
+    color: #555;
+    display:block;
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 4px 10px;
+    width: 40px;
+    text-align: center;
+    position: absolute;
+    
+}
+
+//-----------------------------------------------------
+
 #flash_notice, #flash_error, #flash_alert {
     margin: 10px 0;
     padding: 5px 8px;
