Fixed stupid ajax user show, was dumb issue

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -201,7 +201,7 @@ p#logincontainer {
     border-radius: 0px 0px 15px 15px;
     margin: 0px auto 0 auto;
     padding: 0px 0px;
-    min-height: 100%;
+    min-height: 800px;
     text-align: center;
     width: 70%;
     overflow: hidden;
@@ -273,8 +273,8 @@ div#newpost {
   background-color: #EEEEEE;
 //   border: 1px solid black;
   position: absolute;
-  top: 25%;
-  left: 24%;
+  top: 20%;
+  left: 20%;
   text-align: center;
   
 }
