--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -151,7 +151,7 @@ a#logout {
     background: none repeat scroll 0 0 #6B6DC1;
 //     border-bottom: 1px solid black;
     color: #1E796A;
-    min-height: 1px;
+    min-height: 33.5px;
     padding: 5px;
     text-align: right;
 }
@@ -206,10 +206,11 @@ p#logincontainer {
     width: 70%;
     overflow: hidden;
     clear: both;
+    left: 15%;
 }
 
 div#post {   
-  border-radius: 15px 15px 15px 15px;
+//   border-radius: 15px 15px 15px 15px;
   height: auto;
   width: 99%;
 
@@ -268,14 +269,16 @@ p#author {
 //--------------------------------------------
 // New Post
 div#newpost {
-  width: 60%;
-  height: 55%;
-  background-color: #EEEEEE;
-//   border: 1px solid black;
+  background-color: #d4e2ed;
   position: absolute;
-  top: 20%;
-  left: 20%;
-  text-align: center;
+  float: right;
+  clear: left;
+  top: 64px;
+  right: 15%;
+  margin:8.3% 0 ;
+  width: 40%;
+  min-height: 400px;
+  border-radius: 35px 0px 0px 35px;
   
 }
 div#newposttitle {
@@ -343,13 +346,10 @@ div#selecthinds {
 // User - Show 
 div#usercontainer {
   background-color: #d4e2ed;
-  position: absolute;
-  float: right;
+  position: relative;
   clear: left;
-  top: 0%;
-  right: 15%;
-  margin:8.3% 0 ;
-  width: 40%;
+  margin: 0 ;
+  width: 100%;
   min-height: 490px;
   border-radius: 35px 0px 0px 35px;
 }
@@ -393,6 +393,7 @@ div#userinfo {
   height: auto;
   width: auto;
   text-align: left;
+  border: 1px solid black;
 }
 div#userinfo p {
   display: inline;
@@ -402,20 +403,31 @@ div#userinfo p {
 img#picture {
  position: absolute;
   top: 1%;
-  right: 1%;
+  right: 0;
   height: 160px;
   width: 160px;
   border-radius: 5px 5px 5px 5px;
 //    border: 1px solid black;
   text-align: left;
 }
+h3#userh3 {
+  padding-top: 0; 
+  padding-bottom: 2px; 
+  margin-top: 0; 
+  margin-bottom: 0; 
+  display:inline;
+  color: #444444;
+  font-family: 'Trebuchet MS','Helvetica Neue',Arial,Sans-serif;
+  font-weight: normal;
+}
+
 //----------------------------------------------------
 //Home Main Div's within #container
 div#rightdiv {
   background-color: #d4e2ed;
-//   opacity:0.8; // this and line below added, transpatent
+//   opacity:0.8; // this and line below added, transparent
 //   filter:alpha(opacity=80); /* For IE8 and earlier */
-  min-height: 700px;
+  min-height: 200px;
   margin: 2cm 0px 15px;
   overflow: hidden;
   padding: 0px 5px 10px;
@@ -443,6 +455,18 @@ div#postlist {
 	float: left; //changed
 }
 div#rightlinkcolumn {
+  background-color: #d4e2ed;
+//   opacity:0.8; // this and line below added, transpatent
+//   filter:alpha(opacity=80); /* For IE8 and earlier */
+  min-height: 100%!important;
+  width: 56%;
+  clear: both; //changed from clear: both
+  top: 0;
+  right: 0;
+  z-index: -1;
+  position: absolute;
+}
+div#leftlinkcolumn {
   background-color: #d4e2ed;
 //   opacity:0.8; // this and line below added, transpatent
 //   filter:alpha(opacity=80); /* For IE8 and earlier */
@@ -542,8 +566,42 @@ h3#authpostlink {
 //Buttons
 a#newpostbttn {
     background: #9ec866;
-    border-radius: 2px;
-    box-shadow: 2px 2px 2px #555;
+    border-radius: 0px 0px 0px 70px;
+    color: #555;
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 4px 10px;
+    width: 4%;
+    height: 1.78cm;
+    text-align: center;
+    position: absolute;
+    margin-left: 10%;
+    clear: right;
+}
+a#newpostbttn:hover {
+    background-color: #6B6DC1;
+}
+a#homebttn {
+    background: #9ec866;
+    border-radius: 0 0 70px 0;
+//     box-shadow: 1px 1px 3px #555;
+    color: #555;
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 4px 10px;
+    width: 4%;
+    height: 1.78cm;
+    text-align: center;
+    position: absolute;
+    right: 10%;
+    clear: left;
+}
+a#popular{
+    background: #C3D9FF;
+    border-radius: 2px 2px 0px 0px;
+    box-shadow: 0px 0px 0px 0px #555;
     color: #555;
     display:block;
     font-family: 'Arial', sans-serif;
@@ -552,12 +610,44 @@ a#newpostbttn {
     padding: 4px 10px;
     width: 40px;
     text-align: center;
+    clear: left;
     position: absolute;
-    
+    left: 16%;
+    top: 87px;
+}
+
+a#newest{
+    background: #C3D9FF;
+    border-radius: 2px 2px 0px 0px;
+    box-shadow: 0px 0px 0px 0px #555;
+    color: #555;
+    display:block;
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 4px 10px;
+    width: auto;
+    text-align: center;
+    clear: left;
+    position: absolute;
+    left: 19.5%;
+    top: 87px;
 }
 
 //-----------------------------------------------------
+//paginator
+div#paginator {
+  position: absolute;
+  top: 93px;
+  left: 28%;
+  height: 44px;
+  width: auto; 
+  display: inline;
 
+}
+
+
+//-------------------------------------------------------
 #flash_notice, #flash_error, #flash_alert {
     margin: 10px 0;
     padding: 5px 8px;
