--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,104 @@
 <%= favicon_link_tag %>
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-  <div id="topbar">
-<!--   <%= link_to "Login", login_path, :id => "login" unless current_user %>-->
-    <%= link_to current_user.email, user_path(current_user.id), :remote => true if current_user %>
-    <%= link_to "Logout", signout_path,	 :id => "logout" if current_user %>
-    <p class="notice" style="position:absolute;"><%= notice %></p>
-    <p class="alert" style="position:absolute;"><%= alert %></p>
-  </div>
+  <%= csrf_meta_tags %>  
+      <style type="text/css">
+      /* Override some defaults */
+      html, body {
+        background-color: #EEE;
+      }
+      body {
+        padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
+      }
+      .container > footer p {
+        text-align: center; /* center align it with the container */
+      }
+      .container {
+        width: 1200px; /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
+      }
 
+      /* The white background content wrapper */
+      .content {
+        background-color: #fff;
+        padding: 20px;
+        margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
+        -webkit-border-radius: 0 0 6px 6px;
+           -moz-border-radius: 0 0 6px 6px;
+                border-radius: 0 0 6px 6px;
+        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+                box-shadow: 0 1px 2px rgba(0,0,0,.15);
+      }
+
+      /* Page header tweaks */
+      .page-header {
+        background-color: #f5f5f5;
+        padding: 20px 20px 10px;
+        margin: -20px -20px 20px;
+      }
+
+      /* Styles you shouldn't keep as they are for displaying this base example only */
+      .content .span10,
+      .content .span4 {
+        min-height: 500px;
+      }
+      /* Give a quick and non-cross-browser friendly divider */
+      .content .span3 {
+	border-bottom: 1px solid #eee;
+	border-left: 1px solid #eee;
+	float: right;
+	min-height: 500px;
+	padding-left: 10px;
+      }
+      .content .span11,
+      .content .span4 {
+        margin-left: 0;
+        padding-left: 19px;
+        border-left: 1px solid #eee;
+      }
+
+      .topbar .btn {
+        border: 0;
+      }
+      .topbar {
+	background-color: #4096EE;
+      }
+      .hero-unit {
+	min-height: 500px;
+	padding: 10px 0 0 0;
+      }
+
+    </style>
+
+    <div class="topbar">
+        <div class="container" style="background-color: #4096EE;">
+          <%= link_to "Hindsight", root_path, :class => 'brand' %>
+
+          <ul class="nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+	  <% unless user_signed_in? %>
+	    <div class='pull-right'>
+	    <%= form_for("user", :url => user_session_path, :class => 'pull-right') do |f|%>
+	      <%= f.email_field :email, :style => 'width:150px;', :placeholder => "Email"%>
+	      <%= f.password_field :password, :class => 'input-small', :placeholder => "Password"%>
+	      <%= f.submit "Sign in", :class => 'btn', :style => 'color:#339bb9;' %>
+	    <% end %>
+	    </div>
+	    <p class="pull-right" style="margin-right:20px;">
+	      <strong>
+		<%= link_to "Sign up!", new_user_registration_path %>
+	      </strong>
+	    We want to hear your story.
+	    </p>
+	  <% else %>
+	    <p class="pull-right">Logged in as <%= link_to @user.name if @user.name%></p>
+	  <% end %>
+        </div>
+      </div>
+    </div>
 </head>
 <body>
 
