--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,14 @@
           <h1>Project HindSight <small>I knew you should have built this site sooner...</small></h1>
         </div>
         <div class="row">
-          <div class="span6">
+	  <div class="span6" id="search1" style="display:none; height:500px; border:1px solid black;">
+	    <h2>Search by subject</h2>
+	    <% @tags.each do |subject|%>
+	      <div style="border:1px solid black;" align="center"><%= subject.subject %></div><br />
+	    <% end %>
+	  </div>
+          <div class="span6" id="postcolumn">
+	    <%= link_to "New Post", new_user_post_path(@user), :class => 'btn pull-right', :remote => true%>
             <h2>Post Listings</h2>
 	    <div class="row" id="postlist">
 	      <%= render :partial => 'postlist'%>
@@ -12,6 +19,8 @@
           </div>
           <div class="span11" id="contentarea">
 <!--	    Render Content Area-->
+	    <center><h1> Site Content Area</h1></center> 
+	    <%= link_to "toggle", '#', :id => 'srch'%>
 	  </div>
 	  <div class="span3">Tiny link area</div>
         </div>
@@ -19,7 +28,13 @@
 
       <footer>
         <p>&copy; HindSight 2011</p>
-
       </footer>
-
 </div>
+
+<script>
+$("#srch").click(function () {
+$('#postcolumn').replaceWith(function() {
+  return $('#search1').fadeIn(2500);
+})
+});
+</script>
