--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,9 +50,9 @@
       .content .span3 {
 	border-bottom: 1px solid #eee;
 	border-left: 1px solid #eee;
-	float: right;
 	min-height: 500px;
 	padding-left: 10px;
+	margin-left: 0px;
       }
       .content .span11,
       .content .span4 {
@@ -70,6 +70,7 @@
       .hero-unit {
 	min-height: 500px;
 	padding: 10px 0 0 0;
+	border-radius: 0px;
       }
 
     </style>
